--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,10 +42,10 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform -chdir=./terraform plan -out=tfplan
+        run: terraform -chdir=./terraform plan
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform -chdir=./terraform apply tfplan
+        run: terraform -chdir=./terraform apply
         env:
           TF_APPROVE: "yes"
