--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,7 +9,7 @@ jobs:
   deploy:
     defaults:
       run:
-        working-directory: ${{ env.tf_actions_working_dir }}
+        working-directory: "./terraform"
 
     runs-on: ubuntu-latest
 
