--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color
+        run: terraform plan -no-color -out=plan.out -debug
         continue-on-error: false
 
       - name: Terraform Apply
