ci: disable `-input=false` on `apply` step

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,5 +44,5 @@ jobs:
 
       - name: Terraform Apply
         id: apply
-        run: terraform apply -no-color apply -auto-approve -input=false
+        run: terraform apply -no-color apply -auto-approve
         continue-on-error: false
