--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,8 +14,8 @@ jobs:
         working-directory: "./terraform"
     env:
       TF_VAR_scaleway_access_key: ${{ secrets.TF_VAR_SCALEWAY_ACCESS_KEY }}
-      TF_VAR_scaleway_secret_key: ${{ secrets.TF_VAR_SCALEWAY_PROJECT }}
-      TF_VAR_scaleway_project: ${{ secrets.TF_VAR_SCALEWAY_SECRET_KEY }}
+      TF_VAR_scaleway_secret_key: ${{ secrets.TF_VAR_SCALEWAY_SECRET_KEY }}
+      TF_VAR_scaleway_project: ${{ secrets.TF_VAR_SCALEWAY_PROJECT }}
 
     steps:
       - name: Checkout code
