--- a/kubernetes/2_cluster-configuration.yaml
+++ b/kubernetes/2_cluster-configuration.yaml
@@ -24,7 +24,7 @@ spec:
       console:
         enableMultiLogin: true # Enable or disable simultaneous logins. It allows different users to log in with the same account at the same time.
         port: 30880
-        type: NodePort
+        type: LoadBalancer
 
     # apiserver:            # Enlarge the apiserver and controller manager's resource requests and limits for the large cluster
     #  resources: {}
