--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 node_modules
 .DS_Store
 .terraform
+
+# Terraform
+.terraform
+*.tfstate
+*.tfstate.*.backup
+*.tfstate.backup
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
