--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,6 +37,11 @@ jobs:
         id: validate
         run: terraform validate -no-color
 
+      - name: Terraform Refresh
+        id: refresh
+        run: terraform refresh -no-color
+        continue-on-error: false
+
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color -out=plan -input=false
