--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,10 +23,8 @@ jobs:
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
-
-      - name: Terraform Login
-        id: login
-        run: terraform login ${{ secrets.TERRAFORM_CLOUD_TOKEN }}
+        with:
+          cli_config_credentials_token: ${{ secrets.TERRAFORM_CLOUD_TOKEN }}
 
       - name: Terraform fmt
         id: fmt
