--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: ${{ github.ref != 'refs/heads/master' && 'staging' || 'production' }}
+    environment: ${{ github.ref != 'refs/heads/main' && 'staging' || 'production' }}
     defaults:
       run:
         working-directory: "./terraform"
